test: 좋아요 도메인: LikeService 테스트 및 FakeRepository 수정